--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc",
         "test": "vitest run",
         "test:watch": "vitest",
-        "dev": "tsx src/index.ts"
+        "dev": "tsx src/index.ts",
+        "generate-diversity": "node scripts/generate-diversity-report.js"
     },
     "keywords": [
         "test-data",
